--- a/src/app/total-bill/total-bill.component.html
+++ b/src/app/total-bill/total-bill.component.html
@@ -1,12 +1,13 @@
 <div class="h-100 d-flex flex-column justify-content-center">
-  <h2 class="mb-5">
-    Total Bill
-  </h2>
+    <h2 class="mb-5">
+        Total Bill
+    </h2>
 
-  <div class="d-flex flex-row justify-content-center">
-    <mat-form-field class="col-6 col-sm-4" appearance="fill">
-      <mat-label>Total</mat-label>
-      <input matInput type="number" [(ngModel)]="total" (ngModelChange)="totalChanged()">
-    </mat-form-field>
-  </div>
+    <div class="d-flex flex-row justify-content-center">
+        <mat-form-field class="col-6 col-sm-4" appearance="fill">
+            <mat-label>Total</mat-label>
+            <input matInput type="number" [(ngModel)]="total"
+                   (ngModelChange)="totalChanged()">
+        </mat-form-field>
+    </div>
 </div>
