--- a/src/app/friends/friends.component.css
+++ b/src/app/friends/friends.component.css
@@ -1,4 +1,13 @@
 .friends-container {
+    height: calc(100% - 40px);
     overflow-y: auto;
     overflow-x: hidden;
+}
+
+:host::ng-deep .col-1 {
+    padding: 0 !important;
+}
+
+:host::ng-deep .col-2 {
+    padding: 0 !important;
 }
