--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
 
 <!--<router-outlet></router-outlet>-->
 
-<button mat-mini-fab color="primary" class="float" (click)="next(stepper)"
+<button mat-mini-fab color="primary" class="float" (click)="next()"
         [disabled]="!stepsState?.currentStepValid">
     <mat-icon fontIcon="arrow_forward"></mat-icon>
 </button>
