--- a/src/app/total-bill/total-bill.component.html
+++ b/src/app/total-bill/total-bill.component.html
@@ -7,7 +7,8 @@
         <mat-form-field class="col-6 col-sm-4" appearance="fill">
             <mat-label>Total</mat-label>
             <input matInput type="number" [(ngModel)]="total"
-                   (ngModelChange)="totalChanged()" (keydown.enter)="hey()">
+                   (ngModelChange)="totalChanged()"
+                   (keydown.enter)="enterPressed()">
         </mat-form-field>
     </div>
 </div>
