Beginning of expenses component.

--- a/src/app/util/title-with-add/title-with-add.component.html
+++ b/src/app/util/title-with-add/title-with-add.component.html
@@ -1,4 +1,4 @@
-<div class="text-center mb-4 row">
+<div class="text-center title-row row">
     <div class="col-4"></div>
     <div class="my-auto col-4 text-center">
         <h3 class="mb-0">{{title}}</h3>
