--- a/src/app/util/circle-initials/circle-initials.component.html
+++ b/src/app/util/circle-initials/circle-initials.component.html
@@ -1,3 +1,3 @@
-<div class="circle">
+<div class="circle" [class.selected]="selected" [class.selectable]="selectable">
     <p class="circle-inner">{{initials}}</p>
 </div>
