--- a/src/app/util/friend-selector/friend-selector.component.css
+++ b/src/app/util/friend-selector/friend-selector.component.css
@@ -9,6 +9,6 @@
 .initials-wrapper {
     min-width: 50px;
     display: inline-block;
-    padding: 0 5px;
+    margin: 0 2px;
     white-space: normal;
 }
