--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -1,3 +1,9 @@
+.results-container {
+    height: calc(100% - 40px);
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 .result-name {
     overflow: hidden;
     text-overflow: ellipsis;
