--- a/src/app/util/circle-initials/circle-initials.component.css
+++ b/src/app/util/circle-initials/circle-initials.component.css
@@ -1,21 +1,17 @@
-.circle {
+.outer-circle {
     display: inline-block;
-    background-color: #aaaaaa;
     border-radius: 50%;
+    border-style: solid;
+    border-width: 3px;
 }
 
 .circle-inner {
-    color: white;
     display: table-cell;
     vertical-align: middle;
     text-align: center;
     text-decoration: none;
     height: 40px;
     width: 40px;
-}
-
-.selected {
-    background-color: red;
 }
 
 .selectable {
