--- a/src/app/util/title-with-add/title-with-add.component.html
+++ b/src/app/util/title-with-add/title-with-add.component.html
@@ -4,8 +4,9 @@
         <h3 class="mb-0">{{title}}</h3>
     </div>
     <div class="col-4">
-        <button mat-mini-fab color="primary" class="mat-elevation-z0">
-            <mat-icon fontIcon="add" (click)="addClicked.next()"></mat-icon>
+        <button mat-mini-fab color="primary" class="mat-elevation-z0"
+                (click)="addClicked.next()">
+            <mat-icon fontIcon="add"></mat-icon>
         </button>
     </div>
 
