Fix: incorrectly using friends ids and colors

--- a/src/app/util/circle-initials/circle-initials.component.html
+++ b/src/app/util/circle-initials/circle-initials.component.html
@@ -1,6 +1,6 @@
 <div class="outer-circle"
-     [style.background-color]="selected ? color || 'magenta' : 'white'"
-     [style.border-color]="color || 'magenta'"
+     [style.background-color]="selected ? color : 'white'"
+     [style.border-color]="color"
      [class.selected]="selected"
      [class.selectable]="selectable">
     <p class="circle-inner"
